<resources>
    <string name="app_name">Book</string>
    <string name="back">back</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="signup">Đăng ký</string>
    <string name="subSignup">Hãy tạo tài khoản để tiếp tục!</string>
    <string name="userName.">Tên tài khoản (*)</string>
    <string name="userName">Tên tài khoản hoặc gmail</string>
    <string name="name_p">Họ và tên (*)</string>
    <string name="name">Họ và tên</string>
    <string name="email_p">Email (*)</string>
    <string name="email">Email</string>
    <string name="phone_p">Số điện thoại (*)</string>
    <string name="phone">Số điện thoại</string>
    <string name="password_p">Mật khẩu (*)</string>
    <string name="password">Mật khẩu</string>
    <string name="confirmpw_p">Nhập lại mật khẩu (*)</string>
    <string name="comfirmpw">Nhập lại mật khẩu</string>
    <string name="policy">Bằng việc đăng nhập hoặc đăng ký, bạn đồng ý với Điều khoản và Chính sách bảo mật của chúng tôi</string>
    <string name="quantity_label">SL: %d</string>
    <string name="price_format">%,.0fđ</string>
    <string name="subLogin">Đăng nhập để bắt đầu hành trình khám phá.</string>
    <string name="loginViaGG">Tiếp tục với Google</string>
    <string name="next">Tiếp tục</string>
    <string name="cancel">Hủy</string>
    <string name="resend">Gửi lại</string>
    <string name="noreceiveOTP">Không nhận được OTP?</string>
    <string name="OTPsent">Mã OTP đã được gửi đến email của bạn!</string>
    <string name="confirmOTP">Xác thực OTP</string>
    <string name="google_client_id">871279169744-q6kb05l6b161cs2nmjkknkhu441ot970.apps.googleusercontent.com</string>
    <string name="resetPassword">Đặt lại mật khẩu</string>
    <string name="back_Login">QUAY LẠI ĐĂNG NHẬP</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="prompt_province">Chọn tỉnh/thành phố</string>
    <string name="prompt_district">Chọn quận/huyện</string>
    <string name="prompt_ward">Chọn phường/xã</string>
    <string name="error_empty_field">Vui lòng nhập đầy đủ thông tin</string>
    <string name="error_invalid_identifier">Tên tài khoản hoặc email không tồn tại</string>
    <string name="error_invalid_password">Mật khẩu không chính xác</string>
    <string name="error_unverified_email">Email chưa được xác thực</string>
    <string name="error_server">Lỗi máy chủ, vui lòng thử lại sau</string>
    <string name="error_change_password_failed">Đổi mật khẩu thất bại\n</string>
    <string name="error_server_unexpected_response">"Lỗi server "</string>
    <string name="error_no_token">Không tìm thấy token</string>
    <string name="error_network">Lỗi kết nối\n</string>
    <string name="error_unknown">Lỗi\n</string>

</resources>