<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".activities.RegisterActivity">

    <!-- Header xanh -->
    <View
        android:id="@+id/registerHeader"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivReturn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back_ios_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerHeader"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tbtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerHeader" />

    <!-- Tiêu đề "Đăng ký" -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivReturn" />

    <!-- Phụ đề -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/subSignup"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Form trắng -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerForm"
        android:layout_width="0dp"
        android:layout_height="710dp"
        android:background="@drawable/rounded_top_bg"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="24dp"
        android:paddingTop="48dp"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerHeader">

        <TextView
            android:id="@+id/tvTitleOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingBottom="10dp"
            android:text="@string/confirmOTP"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <!-- Phụ đề -->
        <TextView
            android:id="@+id/tvSubtitleOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/OTPsent"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleOTP" />

        <!-- Nhập mã OTP -->
        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="Hint."
            android:inputType="text"
            android:padding="@dimen/common_padding"
            android:textColor="@drawable/text_colors"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/line_selected"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="4"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="20dp"
            app:itemWidth="48dp"
            app:lineColor="@drawable/line_colors"
            app:lineWidth="2dp"
            app:viewType="rectangle"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitleOTP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/tvResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="20dp"
            android:text="@string/noreceiveOTP"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstPinView" />

        <TextView
            style="@style/Button.NoDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:padding="0dp"
            android:text="@string/resend"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/tvResendOTP"
            app:layout_constraintTop_toBottomOf="@id/firstPinView" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Button.NoDefault"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_border"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvResendOTP" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/Button.NoDefault"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_fill"
            android:backgroundTint="@color/green"
            android:text="@string/next"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/tvResendOTP" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="@string/policy"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>