<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".activities.LoginActivity">

    <!-- Header xanh -->
    <View
        android:id="@+id/loginHeader"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivReturn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/back"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back_ios_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginHeader"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tbtnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/signup"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginHeader" />

    <!-- Tiêu đề "Đăng nhập" -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivReturn" />

    <!-- Phụ đề -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/subLogin"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Form trắng -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginForm"
        android:layout_width="0dp"
        android:layout_height="710dp"
        android:background="@drawable/rounded_top_bg"
        android:paddingHorizontal="24dp"
        android:paddingTop="48dp"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginHeader">

        <!-- Ô nhập tài khoản -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            app:errorTextAppearance="@style/ErrorText"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Ô nhập mật khẩu -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            app:errorTextAppearance="@style/ErrorText"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_visibility_off_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Quên mật khẩu -->
        <TextView
            android:id="@+id/tvforgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/tfPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />

        <!-- Nút Đăng nhập -->
        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_fill"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvforgotPassword" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            android:layout_marginTop="24dp" />

        <!-- Điều khoản -->
        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="2dp"
            android:text="@string/policy"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>